Finished parameterizing features/steps/scenario_account_stock_anglo_saxon.py     You should be able to use this feature to build productions systems.
    Made a first attempt at porting DSL from OpenERPScenario.
    Not documenented or tested yet.

    Now switching to Tryton 3.0 for development from now on.

--- a/features/environment.cfg
+++ b/features/environment.cfg
@@ -1,8 +1,8 @@
 [trytond]
 user = admin
 password = admin
-database_name = test28
-database_type = postgres
+database_name = test30
+database_type = postgresql
 config_file = /etc/trytond.conf
 
 [scenari]
