Added features/steps/trytond_calendar.py Unfinished and no scenari yet.
Added features/steps/scenario_bank.py
Unfinished and no scenari yet.

Split up features/steps/scenario_doctests.py
to match the module name in the Tryton tree.

--- a/features/environment.cfg
+++ b/features/environment.cfg
@@ -3,7 +3,7 @@ user = admin
 password = admin
 database_name = test32
 database_type = postgresql
-config_file = /etc/trytond.conf
+config_file = /n/data/TrytonOpenERP/etc/trytond-3.2.conf
 
 [scenari]
 verbosity = 0
