--- a/features/environment.cfg
+++ b/features/environment.cfg
@@ -9,3 +9,23 @@ config_file = /n/data/TrytonOpenERP/etc/trytond-3.2.conf
 verbosity = 0
 tracer = pdb
 
+# These are the default values in the Tryton code
+[party]
+company_name = B2CK
+
+# These are the default values in the Tryton code
+[account.template]
+main_receivable = Main Receivable
+main_payable = Main Payable
+main_revenue = Main Revenue
+main_expense = Main Expense
+main_cash = Main Cash
+main_tax = Main Tax
+COGS = Main Tax
+
+# These are the values used by most scenario doctests in the Tryton code
+[user]
+Accountant,name = Accountant
+Accountant,login = accountant
+Accountant,password = accountant
+Accountant,email = accountant@example.com
