Added docs/trytond_product.txt to break out reusable product features.
Added features/steps/scenario_account_stock_anglo_saxon_with_drop
_shipment.txt but it's not finished. It has some good multi-user
tests that we want to bring into features.

--- a/features/environment.cfg
+++ b/features/environment.cfg
@@ -21,7 +21,7 @@ main_revenue = Main Revenue
 main_expense = Main Expense
 main_cash = Main Cash
 main_tax = Main Tax
-COGS = Main Tax
+main_cogs = COGS
 
 # These are the values used by most scenario doctests in the Tryton code
 [user]
