Updated for Tyrton 3.4

--- a/features/environment.cfg
+++ b/features/environment.cfg
@@ -1,9 +1,9 @@
 [trytond]
 user = admin
 password = admin
-database_name = test32
+database_name = test36
 database_type = postgresql
-config_file = /n/data/TrytonOpenERP/etc/trytond-3.2.conf
+config_file = /n/data/TrytonOpenERP/etc/trytond-3.6.ini
 
 [scenari]
 verbosity = 0
