--- a/features/environment.cfg
+++ b/features/environment.cfg
@@ -1,6 +1,7 @@
 [trytond]
 user = admin
 password = admin
+super_pwd = admin
 database_name = test36
 database_type = postgresql
 config_file = /n/data/TrytonOpenERP/etc/trytond-3.6.ini
