Added scenario_account_asset - wip

--- a/features/environment.cfg
+++ b/features/environment.cfg
@@ -23,6 +23,7 @@ main_expense = Main Expense
 main_cash = Main Cash
 main_tax = Main Tax
 main_cogs = COGS
+main_depreciation = Main Depreciation
 
 # These are the values used by most scenario doctests in the Tryton code
 [user]
