Fixing account_asset - wip

--- a/features/environment.cfg
+++ b/features/environment.cfg
@@ -15,6 +15,7 @@ tracer = pdb
 company_name = B2CK
 
 # These are the default values in the Tryton code
+# trytond_account-3.6.3/account.xml
 [account.template]
 main_receivable = Main Receivable
 main_payable = Main Payable
@@ -23,7 +24,8 @@ main_expense = Main Expense
 main_cash = Main Cash
 main_tax = Main Tax
 main_cogs = COGS
-main_depreciation = Main Depreciation
+main_asset = Assets
+main_depreciation = Depreciation
 
 # These are the values used by most scenario doctests in the Tryton code
 [user]
